2006-01-18  Patrick van Staveren  <trick@vanstaveren.us>

	* src/*: move DllLoader lines to end of classes.
	
	* src/todo: updated

	* src/TestGPhoto2Sharp.cs: wrap it all in an exception handler
	and return 1 on failure.  Also add use System and clean up.

	* NEWS: updated

	* src/Makefile.am: delete libgphoto2-sharp-docs.{tree,zip} on
	`make clean`

	* moved src/todo to ./TODO

2007-01-17  Patrick van Staveren  <trick@vanstaveren.us>

	* src/todo-formatting renamed to todo.

	* src/CameraFilesystem.cs: cleaned up old sizing comments.

	* src/CameraFile.cs: changed parameter to be a fd integer.

	* src/*: vim:retab

2007-01-15  Patrick van Staveren  <trick@vanstaveren.us>

	* configure.ac: Bump to 2.3.1.2.trunk

	* src/{en/*, libgphoto2-sharp-docs.source, Makefile.am}, configure.ac:
	add in monodoc generation, and initial (uncommented) docs.

	* shamrock/: svn:ignore Makefile

	* src/Camera.cs, src/testsizes-typelist.txt: added
	CameraStorageInformation API.  Currently will only return info for
	first storage device.  Experimental.  Lightly tested.

	* src/{Camera, CameraAbilitiesList}.cs: Formatting: move DllLoader
	lines to bottom.

	* src/todo-formatting.txt: temp tracking file for formatting.

2006-12-30  Patrick van Staveren  <trick@vanstaveren.us>

	* configure.ac, Makefile.am, src/Makefile.am, shamrock/*:
	Take advantage of Shamrock macros from Banshee.

	* src/CameraFile.cs: add constructor to use new
	gp_camera_file_new_from_fd(...), and add corresponding enum.
	This is untested.

	Bump to 2.3.1.1.trunk

2006-12-26  Patrick van Staveren  <trick@vanstaveren.us>

	* src/{Camera.cs, CameraFile.cs, ErrorCodes.cs,
	  Object.cs}: Minor code formatting cleanups
	
	* src/CameraFile.cs: Update mime type list; fix wild typos

2006-12-10  Patrick van Staveren  <trick@vanstaveren.us>

	* Updated COPYING, AUTHORS, NEWS now that we have a license