@@ -1,0 +1,36 @@
+<Project name="libgphoto2-sharp" fileversion="2.0" language="C#" clr-version="Net_1_1" ctype="DotNetProject">
+  <Configurations active="Debug">
+    <Configuration name="Debug" ctype="DotNetProjectConfiguration">
+      <Output directory="./src/" assembly="libgphoto2-sharp" />
+      <Build debugmode="True" target="Library" />
+      <Execution runwithwarnings="True" consolepause="False" runtime="MsNet" clr-version="Net_1_1" />
+      <CodeGeneration compiler="Csc" warninglevel="4" optimize="True" unsafecodeallowed="True" generateoverflowchecks="True" mainclass="" generatexmldocumentation="False" ctype="CSharpCompilerParameters" />
+    </Configuration>
+    <Configuration name="Release" ctype="DotNetProjectConfiguration">
+      <Output directory="./src/" assembly="libgphoto2-sharp" />
+      <Build executeAfterBuild="../../../../usr/lib/monodevelop/bin/make distcheck" debugmode="True" target="Library" />
+      <Execution runwithwarnings="True" consolepause="False" runtime="MsNet" clr-version="Net_1_1" />
+      <CodeGeneration compiler="Csc" warninglevel="4" optimize="True" unsafecodeallowed="True" generateoverflowchecks="True" mainclass="" generatexmldocumentation="False" ctype="CSharpCompilerParameters" />
+    </Configuration>
+  </Configurations>
+  <DeployTargets />
+  <Contents>
+    <File name="./src/Camera.cs" subtype="Code" buildaction="Compile" />
+    <File name="./src/CameraAbilitiesList.cs" subtype="Code" buildaction="Compile" />
+    <File name="./src/CameraFile.cs" subtype="Code" buildaction="Compile" />
+    <File name="./src/CameraFilesystem.cs" subtype="Code" buildaction="Compile" />
+    <File name="./src/CameraList.cs" subtype="Code" buildaction="Compile" />
+    <File name="./src/CameraWidget.cs" subtype="Code" buildaction="Compile" />
+    <File name="./src/Context.cs" subtype="Code" buildaction="Compile" />
+    <File name="./src/ErrorCodes.cs" subtype="Code" buildaction="Compile" />
+    <File name="./src/Object.cs" subtype="Code" buildaction="Compile" />
+    <File name="./src/Port.cs" subtype="Code" buildaction="Compile" />
+    <File name="./src/PortInfo.cs" subtype="Code" buildaction="Compile" />
+    <File name="./src/PortInfoList.cs" subtype="Code" buildaction="Compile" />
+    <File name="./src/TestGphoto2Sharp.cs" subtype="Code" buildaction="Compile" />
+  </Contents>
+  <References>
+    <ProjectReference type="Gac" localcopy="True" refto="System, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+    <ProjectReference type="Gac" localcopy="True" refto="Mono.Posix, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756" />
+  </References>
+</Project>
